--- a/appstate.json
+++ b/appstate.json
@@ -1,119 +1,146 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261577695833568%22%3A%22vp2sR9vD%22%2C%2261577893744539%22%3A%22jQMqVaPl%22%2C%2261578346671326%22%3A%220CZXfNIC%22%2C%22100008285920020%22%3A%22dFNOZ9rQ%22%2C%2261577778330929%22%3A%22DCmIsni2%22%2C%22100040306419779%22%3A%22QPnignKR%22%2C%2261571720355630%22%3A%22W8D8FTye%22%2C%2261578859839710%22%3A%22IWa1oXv6%22%2C%2261579076871830%22%3A%22qoRS1WsU%22%2C%2261579488805470%22%3A%22kUaj6SS8%22%2C%2261579248125568%22%3A%220NLeS0nx%22%2C%2261564155712159%22%3A%22b5p2KNOL%22%2C%22100057747544547%22%3A%22Du2Sf6XE%22%2C%2261578676600121%22%3A%228j1GSmZe%22%2C%2261579310380380%22%3A%22VJin6j4f%22%7D",
+        "value": "%7B%22100022302048496%22%3A%22mnTclqDA%22%2C%22100034518066687%22%3A%22i2z5irKw%22%2C%22100075343123599%22%3A%22SKUl5D3k%22%2C%22100072661716074%22%3A%223MVRL1mz%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-22T09:09:31.341Z",
-        "lastAccessed": "2025-08-22T09:09:31.341Z"
-    },
-    {
-        "key": "sb",
-        "value": "SnFhaIqJ5EpFozQWMdNc1bVW",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-22T09:09:31.341Z",
-        "lastAccessed": "2025-08-22T09:09:31.341Z"
+        "creation": "2025-09-10T23:04:23.959Z",
+        "lastAccessed": "2025-09-10T23:04:23.960Z"
     },
     {
         "key": "datr",
-        "value": "rzOoaODZPnaHwLnbIeyQwRH7",
+        "value": "8e56aONFewd1ED3QRM77Wmun",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T09:09:31.341Z",
-        "lastAccessed": "2025-08-22T09:09:31.341Z"
+        "creation": "2025-09-10T23:04:23.960Z",
+        "lastAccessed": "2025-09-10T23:04:23.960Z"
     },
     {
-        "key": "m_pixel_ratio",
-        "value": "2.1680479049682617",
+        "key": "sb",
+        "value": "8e56aINieKwQKqnLQGfKOX3R",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T09:09:31.341Z",
-        "lastAccessed": "2025-08-22T09:09:31.341Z"
+        "creation": "2025-09-10T23:04:23.960Z",
+        "lastAccessed": "2025-09-10T23:04:23.960Z"
     },
     {
-        "key": "wd",
-        "value": "424x945",
+        "key": "ps_l",
+        "value": "1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T09:09:31.341Z",
-        "lastAccessed": "2025-08-22T09:09:31.341Z"
+        "creation": "2025-09-10T23:04:23.960Z",
+        "lastAccessed": "2025-09-10T23:04:23.960Z"
     },
     {
-        "key": "c_user",
-        "value": "61578676600121",
+        "key": "ps_n",
+        "value": "1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T09:09:31.341Z",
-        "lastAccessed": "2025-08-22T09:09:31.341Z"
-    },
-    {
-        "key": "xs",
-        "value": "8%3AlUkrlP1Kza9bgw%3A2%3A1755853755%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-22T09:09:31.341Z",
-        "lastAccessed": "2025-08-22T09:09:31.341Z"
-    },
-    {
-        "key": "fr",
-        "value": "0IiFEQxC0z4IqsdZs.AWe6vkNKndvf8B96UODKp07CNCqIayHz_rILOIyBxQtyxyxb2h8.BoqDOv..AAA.0.0.BoqDO_.AWdEGNGjwlNf5kUIEWw0_2dF8dQ",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-22T09:09:31.341Z",
-        "lastAccessed": "2025-08-22T09:09:31.341Z"
-    },
-    {
-        "key": "locale",
-        "value": "hi_IN",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-22T09:09:31.341Z",
-        "lastAccessed": "2025-08-22T09:09:31.341Z"
-    },
-    {
-        "key": "pas",
-        "value": "61578676600121%3Ail88acULEq",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-22T09:09:31.341Z",
-        "lastAccessed": "2025-08-22T09:09:31.341Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2899%3Btimestamp%3A1755853759",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-22T09:09:31.341Z",
-        "lastAccessed": "2025-08-22T09:09:31.341Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100418601%3BT%3A29264229",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-22T09:09:31.341Z",
-        "lastAccessed": "2025-08-22T09:09:31.341Z"
+        "creation": "2025-09-10T23:04:23.960Z",
+        "lastAccessed": "2025-09-10T23:04:23.960Z"
     },
     {
         "key": "vpd",
-        "value": "v1%3B817x424x2.1680479049682617",
+        "value": "v1%3B822x424x1.7024905681610107",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T09:09:31.341Z",
-        "lastAccessed": "2025-08-22T09:09:31.341Z"
+        "creation": "2025-09-10T23:04:23.960Z",
+        "lastAccessed": "2025-09-10T23:04:23.960Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100072661716074",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-10T23:04:23.960Z",
+        "lastAccessed": "2025-09-10T23:04:23.960Z"
+    },
+    {
+        "key": "xs",
+        "value": "2%3AbX7eFw3RkTevxA%3A2%3A1755757880%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-10T23:04:23.960Z",
+        "lastAccessed": "2025-09-10T23:04:23.960Z"
+    },
+    {
+        "key": "pas",
+        "value": "100022302048496%3ALXDuJ9gdaf%2C100072661716074%3AokTlsx5Uzv%2C100034518066687%3AR8sAKi9ttA%2C100075343123599%3Ah9VnyQf8wg",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-10T23:04:23.960Z",
+        "lastAccessed": "2025-09-10T23:04:23.960Z"
+    },
+    {
+        "key": "fr",
+        "value": "19wTNVc8DTpIGzAYv.AWclTr_e3ERuuvWq4bLgIIjXZhTcfivpWndLgugaWHOVrrnPtAE.BowPAQ..AAA.0.0.BowgMo.AWe2rpGTTYdl32Hik0tcczcdPyA",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-10T23:04:23.960Z",
+        "lastAccessed": "2025-09-10T23:04:23.960Z"
+    },
+    {
+        "key": "dpr",
+        "value": "1.8752135038375854",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-10T23:04:23.960Z",
+        "lastAccessed": "2025-09-10T23:04:23.960Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1757545296769%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-10T23:04:23.960Z",
+        "lastAccessed": "2025-09-10T23:04:23.960Z"
+    },
+    {
+        "key": "wd",
+        "value": "768x1487",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-10T23:04:23.960Z",
+        "lastAccessed": "2025-09-10T23:04:23.960Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-10T23:04:23.960Z",
+        "lastAccessed": "2025-09-10T23:04:23.960Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101015231%3BT%3A29292424",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-10T23:04:23.960Z",
+        "lastAccessed": "2025-09-10T23:04:23.960Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2919%3Btimestamp%3A1757545455",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-10T23:04:23.960Z",
+        "lastAccessed": "2025-09-10T23:04:23.960Z"
     }
-]
+        ]
