--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
-  "name": "fb-group-locker-bot",
+  "name": "group-locker-bot",
   "version": "1.0.0",
-  "description": "Facebook group name locker bot using ws3-fca",
+  "description": "Facebook group name locker bot with web UI and auto appstate login",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "ws3-fca": "^1.0.0",
-    "npmlog": "^6.0.2"
-  }
+    "ws3-fca": "^1.4.3",
+    "fs": "^0.0.1-security"
+  },
+  "engines": {
+    "node": "20.x"
+  },
+  "keywords": [
+    "facebook",
+    "bot",
+    "group-locker",
+    "auto-login",
+    "render"
+  ],
+  "author": "fighterboy13",
+  "license": "MIT"
 }
