--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "ws3-fca": "^1.4.3",
+    "fca-unofficial": "^1.5.0",
     "fs": "^0.0.1-security"
   },
   "engines": {
