--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "fca-unofficial-extra": "^1.4.4",
+    "fb-chat-api": "^1.6.0",
     "fs": "^0.0.1-security"
   },
   "engines": {
