--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "Facebook group name locker bot with web UI and auto appstate login",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "npm install"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "fb-chat-api": "^1.6.0",
+    "fb-chat-api": "latest",
     "fs": "^0.0.1-security"
   },
   "engines": {
-    "node": "20.x"
+    "node": "20.x",
+    "npm": "9.x"
   },
   "keywords": [
     "facebook",
