--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "npm install"
+    "render-build": "npm install"
   },
   "dependencies": {
     "express": "^4.18.2",
