--- a/package.json
+++ b/package.json
@@ -1,28 +1,20 @@
 {
   "name": "group-locker-bot",
   "version": "1.0.0",
-  "description": "Facebook group name locker bot with web UI and auto appstate login",
+  "description": "Facebook group name locker bot with neon web UI",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "render-build": "npm install"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "fb-chat-api": "latest",
+    "multer": "^1.4.5-lts.1",
     "fs": "^0.0.1-security"
   },
   "engines": {
-    "node": "20.x",
-    "npm": "9.x"
+    "node": "20.x"
   },
-  "keywords": [
-    "facebook",
-    "bot",
-    "group-locker",
-    "auto-login",
-    "render"
-  ],
   "author": "fighterboy13",
   "license": "MIT"
 }
