--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "group-locker-bot",
+  "name": "fb-group-locker",
   "version": "1.0.0",
   "description": "Facebook group name locker bot with neon web UI",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "fb-chat-api": "latest",
+    "fb-chat-api": "https://registry.npmjs.org/fb-chat-api/-/fb-chat-api-1.4.0.tgz",
     "multer": "^1.4.5-lts.1",
     "fs": "^0.0.1-security"
   },
