--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "fb-chat-api": "https://registry.npmjs.org/fb-chat-api/-/fb-chat-api-1.4.0.tgz",
+    "fca-unofficial": "^1.3.12",
     "multer": "^1.4.5-lts.1",
     "fs": "^0.0.1-security"
   },
