--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "fca-unofficial": "latest",
+    "fca-unofficial": "1.3.11",
     "multer": "^1.4.5-lts.1",
     "fs": "^0.0.1-security"
   },
