--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "fb-group-locker",
   "version": "1.0.0",
-  "description": "Facebook group name locker bot with neon web UI",
+  "description": "Facebook Group Name Locker Bot",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "fca-unofficial": "1.3.11",
-    "multer": "^1.4.5-lts.1",
-    "fs": "^0.0.1-security"
+    "body-parser": "^1.20.2",
+    "fca-unofficial": "https://github.com/NanoNodeDev/fca-unofficial.git"
   },
   "engines": {
     "node": "20.x"
